# interop-examples

./: README.md
c-in-rust/tweetnacl/: Cargo.toml
c-in-rust/tweetnacl-sys/: .gitignore  Cargo.toml  README.md  build.rs
c-in-rust/tweetnacl-sys/src/: lib.rs
c-in-rust/tweetnacl/src/: lib.rs
rust-in-c/: .gitignore  Cargo.toml  build.rs  build.sh  main.c  run.sh
rust-in-c++/cxx-crc32fast/: Cargo.toml  README.md  build.rs
rust-in-c++/cxx-crc32fast/include/: crc32fast.h
rust-in-c++/cxx-crc32fast/src/: crc32fast.cc  lib.rs  main.rs
rust-in-c++/cxx-pretty-json/: Cargo.toml  README.md  build.rs
rust-in-c++/cxx-pretty-json/src/: main.cc  main.rs
rust-in-c++/van-gogh/: CMakeLists.txt  README.md  goghviewer.cpp  goghviewer.h
rust-in-c++/van-gogh/rembrandt/: Cargo.toml  build.rs
rust-in-c/src/: bsn.rs  bsn_cbindgen.rs  bsn_diplomat.rs  crc32.rs  lib.rs
rust-in-python/: Cargo.toml
rust-in-python/src/: error.rs  lib.rs
rust-in-python/strompy/: Cargo.toml  strompy_test.py  strompy_test_async.py
rust-in-python/strompy/.env/: pyvenv.cfg
rust-in-python/strompy/src/: chan.rs  error.rs  lib.rs
