[package]
name = "strompy"
version = "0.1.0"
edition = "2021"

[lib]
name = "strompy"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
nalgebra = { version = "0.32.4", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
struson = { version = "0.4.1", features = ["serde"] }
serde_json = "1.0.114"

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]

[dev-dependencies]
nalgebra = { version = "0.32.4", default-features = false, features = ["macros"]}

