[package]
name = "strompy"
version = "0.1.0"
edition = "2021"

[lib]
name = "strompy"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
nalgebra = { version = "0.32.4", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
struson = { version = "0.4.1" }
serde_json = "1.0.114"
futures = "0.3.30"

[dependencies.tokio]
tokio = "1.36.0"

[dependencies.pyo3]
version = "0.21.0-beta.0"
features = ["full"]

[dev-dependencies]
nalgebra = { version = "0.32.4", default-features = false, features = [
    "macros",
] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }

[patch.crates-io]
struson = { path = "../../../../../me/struson" }
